--- a/componentes/build.gradle
+++ b/componentes/build.gradle
@@ -1,13 +1,18 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.1"
 
+    dataBinding {
+        enabled = true
+    }
+
 
     defaultConfig {
-        applicationId "com.example.componentesrappi"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
@@ -23,16 +28,16 @@ android {
         }
     }
 
-    repositories {
+    /*repositories {
         flatDir {
             dirs 'libs'
         }
-    }
+    }*/
 
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.jar','*.aar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
@@ -42,10 +47,15 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     //Glide
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation "com.github.bumptech.glide:glide:4.9.0"
+    kapt "com.github.bumptech.glide:compiler:4.9.0"
+    implementation "com.github.bumptech.glide:annotations:4.9.0"
 
-    implementation(name: 'core-lib', ext: 'aar')
+    //implementation(name: 'core-lib', ext: 'aar')
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
+}
+
+repositories {
+    mavenCentral()
 }
