--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,7 @@ dependencies {
 
 
     api project(":componentes")
+    compile "org.jetbrains.kotlin:kotlin-reflect:1.3.50"
 
     // implementation(name: 'core-lib', ext: 'aar')
 
