--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,15 +15,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".presentation.BuscadorActivity"></activity>
-        <activity android:name=".presentation.VistaDetalleActivity" />
-        <activity android:name=".presentation.MainActivity">
+        <activity android:name=".presentation.BienvenidaActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".presentation.BuscadorActivity" />
+        <activity android:name=".presentation.VistaDetalleActivity" />
+        <activity android:name=".presentation.MainActivity"/>
         <activity android:name=".base.BaseActivity" />
     </application>
 
